fix explode overlap

--- a/_sass/homepage/_clients.scss
+++ b/_sass/homepage/_clients.scss
@@ -26,6 +26,7 @@
   }
   &__logos {
     &__text2 {
+      z-index: 1;
       span {
         transition: 0.5s;
       }
